[tool.poetry]
name = "authlib-gino"
version = "0.1.0"
description = "OpenID Connect provider implemented with Authlib and GINO."
authors = ["Fantix King <fantix.king@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
