[tool.poetry]
name = "authlib-gino"
version = "0.1.0"
description = "OpenID Connect provider implemented with Authlib and GINO."
authors = ["Fantix King <fantix.king@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^0.14.3"
gino = "*"
starlette = {version = "^0.13.2", optional = true}

[tool.poetry.extras]
starlette = ["starlette"]

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
