[tool.poetry]
name = "authlib-gino"
version = "0.1.0"
description = "OpenID Connect provider implemented with Authlib and GINO."
authors = ["Fantix King <fantix.king@gmail.com>"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^0.14.3"
gino = "*"
starlette = {version = "^0.13.2", optional = true}
fastapi = {version = "^0.55.1", optional = true}
alembic = {version = "^1.4.2", optional = true}
psycopg2-binary = {version = "^2.8.5", optional = true}

[tool.poetry.extras]
starlette = ["starlette"]
app = ["fastapi", "alembic", "psycopg2-binary"]

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.12.0"

[tool.poetry.plugins."gino.app.extensions"]
"session.oidc" = "authlib_gino.fastapi_session.oidc:init_app"
"session.admin" = "authlib_gino.fastapi_session.admin:init_app"
"session.demo" = "authlib_gino.fastapi_session.demo_login:init_app"

[tool.poetry.plugins."gino.app.migrations"]
"session.oidc" = "authlib_gino.fastapi_session:migrations"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
